# 6df553fa1bf9ed6f446cc8ecead801fb046389f7c8299e8128a7320debb91324_nyc_bike_demand_forecasting

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt  run_pipeline.py
data/processed/: feature_engineered_data.parquet
data/raw/: 202301-citibike-tripdata_202301-citibike-tripdata_1.parquet  202301-citibike-tripdata_202301-citibike-tripdata_2.parquet  202302-citibike-tripdata_202302-citibike-tripdata_1.parquet  202302-citibike-tripdata_202302-citibike-tripdata_2.parquet  202303-citibike-tripdata_202303-citibike-tripdata_1.parquet  202303-citibike-tripdata_202303-citibike-tripdata_2.parquet  202303-citibike-tripdata_202303-citibike-tripdata_3.parquet  202304-citibike-tripdata_202304-citibike-tripdata_1.parquet  202304-citibike-tripdata_202304-citibike-tripdata_2.parquet  202304-citibike-tripdata_202304-citibike-tripdata_3.parquet  202305-citibike-tripdata_202305-citibike-tripdata_1.parquet  202305-citibike-tripdata_202305-citibike-tripdata_2.parquet  202305-citibike-tripdata_202305-citibike-tripdata_3.parquet  202305-citibike-tripdata_202305-citibike-tripdata_4.parquet  202306-citibike-tripdata_202306-citibike-tripdata_1.parquet  202306-citibike-tripdata_202306-citibike-tripdata_2.parquet  202306-citibike-tripdata_202306-citibike-tripdata_3.parquet  202306-citibike-tripdata_202306-citibike-tripdata_4.parquet  202307-citibike-tripdata_202307-citibike-tripdata_1.parquet  202307-citibike-tripdata_202307-citibike-tripdata_2.parquet  202307-citibike-tripdata_202307-citibike-tripdata_3.parquet  202307-citibike-tripdata_202307-citibike-tripdata_4.parquet  202308-citibike-tripdata_202308-citibike-tripdata_1.parquet  (+31 more)
models/: LightGBM_2025-07-13.joblib  LightGBM_2025-07-14.joblib  LightGBM_2025-07-16.joblib  lightgbm_model.joblib
notebooks/: 3 Time Series Modeling.ipynb  4 Experiments.ipynb
reports/: LightGBM_2025-07-13.csv  LightGBM_2025-07-14.csv  LightGBM_2025-07-16.csv
src/: data_preprocessing.py  evaluate_model.py  feature_engineering.py  run_pipeline.py  training.py
(+4 files in other folders)
